made more workable

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,36 +22,53 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Candidate Tweets 2016</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Candidate Tweets 2016</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <!--<li><a href="#about">About</a></li>-->
-            <!--<li><a href="#contact">Contact</a></li>-->
-          </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Candidates<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/candidate/hillaryclinton">Hillary Clinton</a></li>
+                        <li><a href="/candidate/berniesanders">Bernie Sanders</a></li>
+                        <li><a href="/candidate/tedcruz">Ted Cruz</a></li>
+                        <li><a href="/candidate/realdonaldtrump">Donald Trump</a></li>
+                        <li><a href="/candidate/marcorubio">Marco Rubio</a></li>
+                        <li><a href="/candidate/jebbush">Jeb Bush</a></li>
+                        <li><a href="/candidate/realbencarson">Ben Carson</a></li>
+                        <li><a href="/candidate/carlyfiorina">Carly Fiorina</a></li>
+                        <li><a href="/candidate/chrischristie">Chris Christie</a></li>
+                        <li><a href="/candidate/randpaul">Rand Paul</a></li>
+                    </ul>
+                </li>
+
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-        {% block content %}{% endblock %}
     </div>
+</nav>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/static/js/bootstrap.min.js"></script>
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
