--- a/app/templates/entities.html
+++ b/app/templates/entities.html
@@ -6,7 +6,19 @@
         <h3>{{ key }}</h3>
         <ul class="list-group">
         {% for entity in value %}
+            {% if key == "Top Users" %}
+            <li class="list-group-item">
+                {% set url = "https://twitter.com/" + entity[0][1:] %}
+                [{{ entity[1] }}]<a href={{ url }}> {{ entity[0] }}</a>
+            </li>
+            {% elif key == "Top Hashtags" %}
+            <li class="list-group-item">
+                {% set url = "https://twitter.com/hashtag/" + entity[0][1:] %}
+                [{{ entity[1] }}]<a href={{ url }}> {{ entity[0] }}</a>
+            </li>
+            {% else %}
             <li class="list-group-item">[{{ entity[1] }}] {{ entity[0] }}</li>
+            {% endif %}
         {% endfor %}
         </ul>
     {% endfor %}
