--- a/app/templates/tweets.html
+++ b/app/templates/tweets.html
@@ -1,12 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>@{{ candidate.handle }}</h1>
-    <h2>{{ date }}</h2>
-    {% if tweets|length != 0 %}
+<h1>@{{ candidate.handle }}</h1>
+{% if tweets|length != 0 %}
+<div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading">{{ date }}</div>
+    <!-- Table -->
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Timestamp</th>
+            <th>Tweet</th>
+        </tr>
+        </thead>
         {% for tweet in tweets %}
-        <div><p><b>{{ tweet.timestamp }}:</b>&nbsp;{{ tweet.body }}</p></div>
-        {% endfor %}
-    {% else %}
-        <div><p>No tweets found for this date</p></div>
-    {% endif %}
+        <tr>
+            <td>{{ tweet.timestamp }}</td>
+            <td>{{ tweet.body }}</td>
+            {% endfor %}
+        </tr>
+    </table>
+</div>
+{% else %}
+<div><p>No tweets found for this date</p></div>
+{% endif %}
 {% endblock %}
+
+
